# afdd

./: .dockerignore  .env.example  .gitignore  2024-07-02T160000_to_2024-07-02T180000_anomalies_1.json  Dockerfile  Dockerfile.afdd  Dockerfile.data  Dockerfile.pg  Dockerfile.sample_data  README.md  anomaly.py  anomaly_ops.py  create_sample_data.py  deploy.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  docker_compose.yml  kaiterra_dcoffice.ttl  kaiterra_example.ttl  main.py  mkdocs.yml  past_data_analysis.py  pyproject.toml  requirements.txt  rule.py  rules.json  sample_timeseries_data.json  setup.py  test_anomaly.py  timescale.py  utils.py
.github/workflows/: dev-deploy.yml  tests.yml
afdd/: db.py  logger.py  main.py  models.py  rule_functions.py  scratch.py  utils.py
docs/: index.md  logic.md  models.md  scripts.md
extra/neo4j/: Dockerfile.neo4j
extra/sample_data/: Dockerfile
neo4j/: Dockerfile.neo4j  apoc.conf
postgres/: Dockerfile.pg  init.sql  modify.sql
sample_data/: Dockerfile  create_sample_data.py
scripts/: past_data_analysis.py  setup_db.py
tests/: scratch.py  test_analyze.py  test_anomaly.py  test_db.py  test_load_graph.py  test_neo4j.py  test_rules.py  test_vectorized_op.py
tests/unit/: test_analyze.py  test_load_graph.py  test_rules.py  test_utils.py
